@startuml Class
!theme metal
abstract class BasicCar {
    -modelName:String
    -basePrice:Int
    -onRoadPrice:Int
    +BasicCar()
    +getModelName():String
    +setModelName(String):void
    +setAdditionalPrice():int
    +clone():BasicCar
}

class Nano {
    +Nano(String)
    +clone():BasicCar
}

class Ford {
    +Ford(String)
    +clone():BasicCar
}

BasicCar <|-- Nano
BasicCar <|-- Ford

@enduml